Fix broken layout when all questions open

--- a/faq-accordion-card-main/background.scss
+++ b/faq-accordion-card-main/background.scss
@@ -19,7 +19,7 @@ body {
   border-radius: 15px;
   max-width: 1000px;
   box-shadow: 0 25px 20px rgb(0, 0, 0, 0.2);
-  max-height: 600px;
+  max-height: 1000px;
   margin: 11rem auto 0 auto;
 }
 
