--- a/faq-accordion-card-main/images.scss
+++ b/faq-accordion-card-main/images.scss
@@ -3,6 +3,7 @@ $images_location_y: 295px;
 .card__images {
   overflow: hidden;
   flex: 1;
+  max-height: 600px;
 }
 
 .woman-online {
@@ -24,7 +25,7 @@ $images_location_y: 295px;
 
 .card__box {
   position: absolute;
-  top: 36%;
+  top: 220px;
   transform: translateX(-54%);
   z-index: 2;
 }
